--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 h1{
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .mynuddin{
@@ -22,11 +22,13 @@ h1{
 }
 section{
     display: flex;
-    margin-bottom: 120px;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 2%;
+    padding-right: 10%;
+    
 }
 .half-width img{
     width: 80%;
@@ -41,4 +43,8 @@ section{
     background-repeat: no-repeat;
     background-position: right;
     
+    
+}
+.dream{
+    padding-right: 10px;
 }
