--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
 h1{
     font-size: 40px;
 }
+h2{
+    font-size: 30px;
+}
 
 .mynuddin{
     color: orange;
@@ -47,4 +50,39 @@ h1{
 }
 .dream{
     padding-right: 10px;
+}
+
+.experience-developer{
+    width: 40%;
+    padding-left: 20px;
+    padding-right: 5px;
+    padding-top:20px;
+    padding-bottom: 20px;
+    box-shadow: 10px 10px 20px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    
+    
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom 10px left 0px;;
+
+}
+#web-dev-exp{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+
+#baby-web-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+footer{
+    text-align: center;
 }
